--- a/content/counties/rapidly_increasing_cases.Rmd
+++ b/content/counties/rapidly_increasing_cases.Rmd
@@ -22,18 +22,18 @@ plot_time_series(rising.counties[3])
 plot_time_series(rising.counties[4]) 
 plot_time_series(rising.counties[5]) 
 plot_time_series(rising.counties[6])
-plot_time_series(rising.counties[7]) 
-plot_time_series(rising.counties[8]) 
-plot_time_series(rising.counties[9]) 
+plot_time_series(rising.counties[7])
+plot_time_series(rising.counties[8])
+plot_time_series(rising.counties[9])
 plot_time_series(rising.counties[10])
-plot_time_series(rising.counties[11]) 
-plot_time_series(rising.counties[12]) 
-plot_time_series(rising.counties[13]) 
-plot_time_series(rising.counties[14]) 
-plot_time_series(rising.counties[15]) 
-plot_time_series(rising.counties[16]) 
-plot_time_series(rising.counties[17]) 
-plot_time_series(rising.counties[18]) 
-plot_time_series(rising.counties[19]) 
-plot_time_series(rising.counties[20]) 
+# plot_time_series(rising.counties[11])
+# plot_time_series(rising.counties[12])
+# plot_time_series(rising.counties[13])
+# plot_time_series(rising.counties[14])
+# plot_time_series(rising.counties[15])
+# plot_time_series(rising.counties[16]) 
+# plot_time_series(rising.counties[17]) 
+# plot_time_series(rising.counties[18]) 
+# plot_time_series(rising.counties[19]) 
+# plot_time_series(rising.counties[20]) 
 ```
